public class Zauberer {
    private int zauberkraft;

    public  Zauberer(int zauberkraft) {

        this.zauberkraft = zauberkraft
    }

    static private stat name() {}
    static public int getAngriffswert() {}
    static public void heilen(Held held) {}
}
