@startuml
skinparam classAttributeIconSize 0
class Held{
# name : String
# stärke : int
# lebenspunkte : int
# angriffswert : int
# waffe : Waffe
+ addLebenspunkte(faktor : int) : boolean
+ angreifen(monster : Monster, regel : Kampfregel) : void
+ {abstract} getAngriffswert() : int
- {abstract} useweapon(w : Waffe) : void
}
class Zauberer{
- zauberkraft : int

- {static} name() : stat
+ getAngriffswert() : int
+ heilen(held : Held) : void
}
Held <|-- Zauberer
' class Krieger{
' - ausdauer : int
' + Krieger(name : String, stärke : int, lebenspunkte : int, angriffswert : int, ausdauer : int)
' + Krieger(name : String)
' + getAngriffswert() : int
' }
' Krieger --|> Held
' class Würfel{
' - augen : int
' + Würfel(augen : int)
' + würfeln() : int
' }
'
' class Gott {
' - Gottpower : long
' + {static} würfeln() : long
' + töten(held: Held) : void 
' }
@enduml
